manifests/forgejo/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: external-https-headers
  namespace: forgejo
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`git.pablomarelli.dev`)
      kind: Rule
      middlewares:
        - name: external-https-headers
      services:
        - name: forgejo
          port: 3000
